Chapter-5_Services/ingress/node-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: node-app
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/tags: Environment=dev,Team=test
spec:
  rules:
  - host: node-app.localjobs.click
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: node-app
            port: 
              number: 8083
